Enum user_role {
  customer
  admin
}
 
Enum auth_provider {
  local
  google
}

Enum order_status {
  processing
  shipped
  delivered
  cancelled
}
 
Table users {
  id            uuid          [pk, default: `gen_random_uuid()`]
  email         text          [unique, not null]
  password_hash text
  full_name     text          [not null]
  role          user_role     [not null, default: 'customer']
  auth_provider auth_provider [not null, default: 'local']
  provider_id   text
  created_at    timestamptz   [not null, default: `now()`]

  indexes {
    (auth_provider, provider_id) [unique]
  }
}
 
Table refresh_tokens {
  id         uuid      [pk, default: `gen_random_uuid()`]
  user_id    uuid      [not null]
  token_hash text      [not null]
  revoked    boolean   [not null, default: false]
  created_at timestamp [not null, default: `now()`]
 
  indexes {
    user_id
  }
}
 
Table country {
  id           uuid [pk, default: `gen_random_uuid()`]
  country_name text [not null]
}
 
Table address {
  id            uuid         [pk, default: `gen_random_uuid()`]
  unit_number   text
  street_number text
  address_line1 text [not null]
  address_line2 text
  city          text [not null]
  region        text
  postal_code   varchar(20)
  country_id    uuid         [not null]
 
  indexes {
    country_id
  }
}
 
Table user_address {
  user_id    uuid    [not null]
  address_id uuid    [not null]
  is_default boolean [not null, default: false]
 
  indexes {
    (user_id, address_id) [pk]
  }
}
 
Table product_category {
  id                 uuid         [pk, default: `gen_random_uuid()`]
  parent_category_id uuid
  category_name      text         [not null]
}
 
Table product {
  id            uuid          [pk, default: `gen_random_uuid()`]
  name          text          [not null]
  description   text
  product_image text
  SKU           text          [not null]
  qty_in_stock  int           [not null, default: 0]
  price         decimal(10,2) [not null]
  is_active     boolean       [not null, default: true]

  indexes {
    name
    SKU [unique]
  }
}
 
Table product_category_link {
  product_id          uuid [not null]
  product_category_id uuid [not null]
 
  indexes {
    (product_id, product_category_id) [pk]
    product_category_id
  }
}
 
Table promotion {
  id            uuid          [pk, default: `gen_random_uuid()`]
  name          text          [not null]
  description   text
  discount_rate decimal(5,2)  [not null]
  start_date    timestamp     [not null]
  end_date      timestamp     [not null]
}
 
Table promotion_product {
  product_id   uuid [not null]
  promotion_id uuid [not null]
 
  indexes {
    (product_id, promotion_id) [pk]
  }
}
 
Table carts {
  id         uuid      [pk, default: `gen_random_uuid()`]
  user_id    uuid      [unique, not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}
 
Table cart_items {
  id         uuid [pk, default: `gen_random_uuid()`]
  cart_id    uuid [not null]
  product_id uuid [not null]
  quantity   int  [not null, default: 1]
 
  indexes {
    (cart_id, product_id) [unique]
  }
}
 
Table orders {
  id           uuid          [pk, default: `gen_random_uuid()`]
  user_id      uuid          [not null]
  address_id   uuid          [not null]
  status       order_status  [not null, default: 'processing']
  tracking_id  text          [not null]
  total_amount decimal(10,2) [not null]
  created_at   timestamp     [not null, default: `now()`]
  updated_at   timestamp     [not null, default: `now()`]
 
  indexes {
    user_id
  }
}
 
Table order_items {
  id           uuid          [pk, default: `gen_random_uuid()`]
  order_id     uuid          [not null]
  product_id   uuid          [not null]
  product_name text  [not null]
  unit_price   decimal(10,2) [not null]
  quantity     int           [not null]
 
  indexes {
    order_id
  }
}
 
Table conversations {
  id              uuid      [pk, default: `gen_random_uuid()`]
  customer_id     uuid      [not null]
  last_message_at timestamp [not null, default: `now()`]
  created_at      timestamp [not null, default: `now()`]
 
  indexes {
    customer_id
    last_message_at
  }
}
 
Table messages {
  id              uuid      [pk, default: `gen_random_uuid()`]
  conversation_id uuid      [not null]
  sender_id       uuid      [not null]
  content         text      [not null]
  is_read         boolean   [not null, default: false]
  created_at      timestamp [not null, default: `now()`]
 
  indexes {
    conversation_id
  }
}
 
Ref: refresh_tokens.user_id > users.id [delete: cascade]
 
Ref: address.country_id      > country.id [delete: restrict]
Ref: user_address.user_id    > users.id   [delete: cascade]
Ref: user_address.address_id > address.id [delete: cascade]
 
Ref: product_category.parent_category_id        > product_category.id [delete: set null]
Ref: product_category_link.product_id           > product.id          [delete: cascade]
Ref: product_category_link.product_category_id  > product_category.id [delete: cascade]
Ref: promotion_product.product_id               > product.id          [delete: cascade]
Ref: promotion_product.promotion_id             > promotion.id        [delete: cascade]
 
Ref: carts.user_id          > users.id   [delete: cascade]
Ref: cart_items.cart_id     > carts.id   [delete: cascade]
Ref: cart_items.product_id  > product.id [delete: cascade]
Ref: orders.user_id         > users.id    [delete: restrict]
Ref: orders.address_id      > address.id  [delete: restrict]
Ref: order_items.order_id   > orders.id  [delete: cascade]
Ref: order_items.product_id > product.id [delete: restrict]
 
Ref: conversations.customer_id > users.id         [delete: cascade]
Ref: messages.conversation_id  > conversations.id [delete: cascade]
Ref: messages.sender_id        > users.id         [delete: cascade]
 